<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/ourdream2ef"
    android:gravity="center_horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/menu_title"
        android:layout_width="321dp"
        android:layout_height="206dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="110dp"

        android:fontFamily="@font/retro"
        android:rotationX="12"
        android:text="@string/menu_title"
        android:textAlignment="center"
        android:textColor="@color/pink100"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowDy="25"
        android:shadowRadius="1"
        android:textSize="60sp" />

    <Button
        android:id="@+id/button_solo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/retro"
        android:text="@string/play_solo"
        android:textColor="@color/pink100"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowDy="10"
        android:shadowRadius="1"
        android:textSize="25dp" />

    <Button
        android:id="@+id/button_multi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/retro"
        android:text="@string/play_multi"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowDy="10"
        android:shadowRadius="1"
        android:textColor="@color/pink100"
        android:textSize="25dp" />

    <Button
        android:id="@+id/button_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/retro"
        android:text="@string/score"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowDy="10"
        android:shadowRadius="1"
        android:textColor="@color/pink100"
        android:textSize="25dp" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/retro"
        android:text="@string/settings"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowDy="10"
        android:shadowRadius="1"
        android:textColor="@color/pink100"
        android:textSize="25dp" />
</LinearLayout>